Peck and Vanja are now properly caught with pants down.
Pedro cannot be asked about life in the monastery if NH is magician.
Pepe's dialog for buying a sheep is only available if NH knows he needs one and is not part of any guild yet.
Pyrokar only gives one potion for healing possession, as he states in his dialog lines.
Ramirez shows two dialogue options only after he sees the thieves' signal.
Randolph always drinks the medicine when it is given to him.
Randolph drinks only beer during his drinking contest.
Randolph gives the experience bonus for winning Rukhar in the drinking competition, instead of Orlan.
Randolph runs away from the bandits on the bridge and avoids fighting them.
Raoul turns toward Sentenza when he calls for him.
Regis will tell the whole story of Bosper's bow thief, if talking to him after the bow was returned.
Rengaru will move to another location when threatened with prisonment.
Rethon will only work with Jan after given the permission from Garond.
Riordian mentions William in the initial dialogue instead of the dialogue about the west.
Rod will give no experience for returning his sword later.
Rosi can only be asked about Bengar's farm if NH has not yet spoken with Bengar.
Rosi will not create extra gold in her inventory when giving the reward to NH for escorting her.
Rukhar drinks only beer during his drinking contest.
Rupert can only be asked where Matteo can be found if NH did not find him yet.
Salandril can be commented about fake mining shares before knowing he is behind it.
Salandril can only be accused of distributing the fake mining shares after reading one and seeing his signature.
Salandril does not care about NH wearing weapons or magic while in the monastery.
Salandril will eventually return to the city, but does not trade with NH.
Salandril will give you his fake mining shares before when leaving to the monastery to be judged.
Samuel will actually drink Hasty Herrings with NH when he says so, but only once.